--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: ruby
-before_script: mysql -e 'create database rene_test;'
+before_script: 
+  -mysql -e 'create database rene_test;'
+  - "sh -e /etc/init.d/xvfb start"
 script: PADRINO_ENV=travis padrino rake
